exposed the UI port, added a logging message when the ui starts, changed playwright configs to point to new ui port

--- a/upload-server/docker-compose.yml
+++ b/upload-server/docker-compose.yml
@@ -31,8 +31,9 @@ services:
       - REDIS_CONNECTION_STRING=redis://redispw@cache:6379
     ports:
       - "8080:8080"
-    # command: go run ./...
-    command: go test --tags=integration -coverprofile=c.out -coverpkg=./... ./cmd
+      - "8081:8081"
+    command: go run ./...
+    # command: go test --tags=integration -coverprofile=c.out -coverpkg=./... ./cmd
     depends_on:
       - azurite
       - cache
