--- a/upload-server/configs/local/.env.example
+++ b/upload-server/configs/local/.env.example
@@ -14,5 +14,6 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_SESSION_TOKEN=
 REDIS_CONNECTION_STRING=
+OAUTH_INTROSPECTION_URL=
 OAUTH_ISSUER_URL=
 OAUTH_REQUIRED_SCOPES=
