--- a/.github/workflows/build-and-deploy-branch-tst.yml
+++ b/.github/workflows/build-and-deploy-branch-tst.yml
@@ -2,17 +2,11 @@ name: TST - Build and Deploy Branch
 
 on:
   workflow_dispatch:
-    inputs:
-      REF:
-        description: Branch from CDCgov/data-exchange-upload that you want to deploy to the tst environment.
-        default: main
-        required: true
-        type: string
 
 jobs:
   remote-trigger:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
       WORKFLOW: build-and-deploy-branch-tst.yml
-      REF: ${{ inputs.REF }}
+      REF: "${{ github.ref_name }}" # Resolves to the branch being tested
     secrets: inherit
