volume for minio

--- a/upload-server/docker-compose.minio.yml
+++ b/upload-server/docker-compose.minio.yml
@@ -6,6 +6,8 @@ services:
       - "8000:8000"
       - "8001:8001"
     command: server /minio --console-address :8001 --address :8000
+    volumes:
+      - minio_data:/data
   upload-server:
     environment:
       - S3_ENDPOINT=http://minio:8000
@@ -17,3 +19,7 @@ services:
     depends_on:
       - minio
       - cache
+
+volumes:
+  minio_data:
+    driver: local
