--- a/upload-server/docker-compose.minio.yml
+++ b/upload-server/docker-compose.minio.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8000:8000"
       - "8001:8001"
-    command: server /minio --console-address :8001 --address :8000
+    command: server /data --console-address :8001 --address :8000
     volumes:
       - minio_data:/data
   upload-server:
