--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -32,7 +32,7 @@ jobs:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
       WORKFLOW: fortify.yml
-      REF: ${{ github.ref_name }}
+      REF: ${{ github.head_ref }}
     secrets: inherit
 
     
