fortify scan finding fix

--- a/upload-server/Dockerfile
+++ b/upload-server/Dockerfile
@@ -4,6 +4,10 @@ ARG REPO="cdcgov/data-exchange-upload"
 ARG LATEST_RELEASE_VERSION="unspecified"
 ARG GIT_SHORT_SHA="unspecified"
 
+# Create the 'app' user and group, and a working directory for the app
+RUN addgroup -S app && adduser -S -G app app
+RUN mkdir /app && chown app:app /app
+
 WORKDIR /app
 
 COPY go.mod go.sum ./
@@ -21,6 +25,15 @@ FROM docker.io/library/alpine:3.20.2
 WORKDIR /app
 
 COPY --from=builder /app/dextusd .
+
+# Create the 'app' user and group
+RUN addgroup -S app && adduser -S -G app app
+
+# Ensure the app user owns the binary
+RUN chown app:app ./dextusd
+
+# Switch to the non-root 'app' user
+USER app
 
 EXPOSE 8080
 
