--- a/upload-server/docker-compose.testing.yml
+++ b/upload-server/docker-compose.testing.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   upload-server:
-    command: go test ./cmd -tags=integration
+    command: go test -coverprofile=c.out -coverpkg=./... ./... -tags=integration
     depends_on:
       - minio
       - azurite
