--- a/upload-server/docker-compose.testing.yml
+++ b/upload-server/docker-compose.testing.yml
@@ -2,6 +2,8 @@ version: "3.9"
 services:
   upload-server:
     command: go test -coverprofile=c.out -coverpkg=./... ./... -tags=integration
+    environment:
+      - AZURITE_STORAGE_KEY=${AZURE_STORAGE_KEY}
     depends_on:
       - minio
       - azurite
