--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -35,6 +35,10 @@ jobs:
       AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
     steps:
       - uses: actions/checkout@v4
+      - name: Install podman
+        run: apt-get -y install podman
+      - name: Install podman compose
+        run: pip3 install podman-compose
       - name: Run Tests
         run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
       - name: Show coverage
