Refactor of top level tests (#484)
* Example cross cloud delivery test

* Test cases for cross cloud delivery

- azure -> s3
- s3 -> azure
- file -> s3

* Disable UI if no port is provided

* Pre configure minio with test-bucket

* Run simulation tests in ci

* Integration test documentation

--- a/upload-server/docker-compose.minio.yml
+++ b/upload-server/docker-compose.minio.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - "8000:8000"
       - "8001:8001"
-    command: server /minio --console-address :8001 --address :8000
+    command: server /data --console-address :8001 --address :8000
     volumes:
-      - minio_data:/data
+      - ./configs/local/minio:/data
   upload-server:
     environment:
       - S3_ENDPOINT=http://minio:8000
@@ -19,7 +19,3 @@ services:
     depends_on:
       - minio
       - cache
-
-volumes:
-  minio_data:
-    driver: local
