--- a/upload-server/docker-compose.azurite.yml
+++ b/upload-server/docker-compose.azurite.yml
@@ -16,7 +16,7 @@ services:
       - AZURE_STORAGE_KEY=${AZURE_STORAGE_KEY}
       - AZURE_ENDPOINT=http://azurite:10000/devstoreaccount1
       - TUS_AZURE_CONTAINER_NAME=test
-      - DEX_MANIFEST_CONFIG_CONTAINER_NAME=config
+      # - DEX_MANIFEST_CONFIG_CONTAINER_NAME=config
     depends_on:
       - azurite
       - cache
