updated docker-compose files to use local or .env environment variables or use the default; updated the app to use the appconf again; added script that will run the app with the .env file if it is present

--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -32,7 +32,7 @@ jobs:
     name: Simulation Test
     runs-on: ubuntu-latest
     env:
-      AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
+      AZURE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
     steps:
       - uses: actions/checkout@v4
       - name: Install podman compose
