--- a/upload-server/.env.example
+++ b/upload-server/.env.example
@@ -33,7 +33,7 @@ OAUTH_REQUIRED_SCOPES=
 
 # ui
 UI_PORT= # has default
-CSRF_TOKEN= # has default
+CSRF_TOKEN=
 
 #################################
 #### Upload location configs ####
@@ -55,6 +55,9 @@ DEX_MANIFEST_CONFIG_CONTAINER_NAME=
 # S3 upload bucket
 S3_ENDPOINT=
 S3_BUCKET_NAME=
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 DEX_MANIFEST_CONFIG_BUCKET_NAME=
 DEX_S3_MANIFEST_CONFIG_FOLDER_NAME=
 
