--- a/upload-server/docker-compose.yml
+++ b/upload-server/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   prometheus:
     image: prom/prometheus
@@ -24,22 +23,26 @@ services:
       - ./configs/local/grafana/provisioning:/etc/grafana/provisioning
   cache:
     image: redis:alpine
+    container_name: cache
     restart: always
     ports:
-      - "6379:6379"
+      - 6379:6379
     command: redis-server
   upload-server:
     image: golang:alpine
+    container_name: upload-server
     volumes:
       - .:/code
       - ../upload-configs:/upload-configs
     working_dir: /code
     environment:
       - REDIS_CONNECTION_STRING=redis://redispw@cache:6379
+      # Generate a random 32-byte string here https://generate-random.org/encryption-key-generator?count=1&bytes=32&cipher=aes-256-cbc&string=&password=
+      - CSRF_TOKEN=${CSRF_TOKEN}
     ports:
-      - "8080:8080"
-      - "8081:8081"
-    command: go run ./...
+      - ${SERVER_PORT:-8080}:${SERVER_PORT:-8080}
+      - ${UI_PORT:-8081}:${UI_PORT:-8081}
+    command: /bin/sh -c "./run-server.sh"
     depends_on:
       - cache
 volumes:
