--- a/upload-server/.env.example
+++ b/upload-server/.env.example
@@ -14,26 +14,26 @@ TUSD_HANDLER_BASE_PATH= # has default
 TUSD_HANDLER_INFO_PATH= # has default
 UPLOAD_CONFIG_PATH= # has default
 EVENT_MAX_RETRY_COUNT= # has default
-
-# processing status health
-PROCESSING_STATUS_HEALTH_URI=
-
-# metrics
 METRICS_LABELS_FROM_MANIFEST= # has default
 
 # tusd
 TUS_UPLOAD_PREFIX= # has default
+
+# ui
+UI_PORT= # has default
+CSRF_TOKEN=
+
+# distributed file locking with redis
 REDIS_CONNECTION_STRING=
 
-# oauth
+# oauth token verification middleware
 OAUTH_AUTH_ENABLED= # has default
 OAUTH_INTROSPECTION_URL=
 OAUTH_ISSUER_URL=
 OAUTH_REQUIRED_SCOPES=
 
-# ui
-UI_PORT= # has default
-CSRF_TOKEN=
+# processing status health
+PROCESSING_STATUS_HEALTH_URI=
 
 #################################
 #### Upload location configs ####
@@ -45,10 +45,10 @@ LOCAL_FOLDER_UPLOADS_TUS= # has default
 # Azure upload container
 AZURE_STORAGE_ACCOUNT=
 AZURE_STORAGE_KEY=
+AZURE_ENDPOINT=
 AZURE_TENANT_ID=
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
-AZURE_ENDPOINT=
 TUS_AZURE_CONTAINER_NAME=
 DEX_MANIFEST_CONFIG_CONTAINER_NAME=
 
