updated readme documentation to instructions for configuring the location of the sender manifest config files, the report location, the event location, the event publisher and subscriber, and the delivery targets

--- a/upload-server/.env.example
+++ b/upload-server/.env.example
@@ -70,9 +70,8 @@ LOCAL_REPORTS_FOLDER= # has default
 
 # Azure report queue
 REPORTER_CONNECTION_STRING=
-REPORTER_TOPIC=
 REPORTER_QUEUE=
-REPORTER_SUBSCRIPTION=
+REPORTER_TOPIC=
 
 ##################################################
 #### Event publish/subscribe location configs ####
@@ -84,20 +83,17 @@ LOCAL_EVENTS_FOLDER= # has default
 # Azure event publisher queue
 PUBLISHER_CONNECTION_STRING=
 PUBLISHER_TOPIC=
-PUBLISHER_QUEUE=
-PUBLISHER_SUBSCRIPTION=
 
 # Azure event subscriber queue
 SUBSCRIBER_CONNECTION_STRING=
 SUBSCRIBER_TOPIC=
-SUBSCRIBER_QUEUE=
 SUBSCRIBER_SUBSCRIPTION=
 
 ###########################################
-#### File delivery destination configs ####
+#### File delivery target configs ####
 ###########################################
 
-#### Routing delivery destinations ####
+#### Routing delivery target ####
 
 # local file system routing directory
 LOCAL_ROUTING_FOLDER= # has default
@@ -116,7 +112,7 @@ ROUTING_S3_ENDPOINT=
 ROUTING_S3_BUCKET_NAME=
 
 
-#### EDAV delivery destinations ####
+#### EDAV delivery target ####
 
 # local file system edav directory
 LOCAL_EDAV_FOLDER= # has default
@@ -135,7 +131,7 @@ EDAV_S3_ENDPOINT=
 EDAV_S3_BUCKET_NAME=
 
 
-#### EHDI delivery destinations ####
+#### EHDI delivery target ####
 
 # local file system ehdi directory
 LOCAL_EHDI_FOLDER= # has default
@@ -154,7 +150,7 @@ EHDI_S3_ENDPOINT=
 EHDI_S3_BUCKET_NAME=
 
 
-#### EICR delivery destinations ####
+#### EICR delivery target ####
 
 # local file system eirc directory
 LOCAL_EICR_FOLDER= # has default
@@ -173,7 +169,7 @@ EICR_S3_ENDPOINT=
 EICR_S3_BUCKET_NAME=
 
 
-#### NCIRD delivery destinations ####
+#### NCIRD delivery target ####
 
 # local file system ncird directory
 LOCAL_NCIRD_FOLDER= # has default
