--- a/upload-reports/github-actions/upload-reports-custom.yml
+++ b/upload-reports/github-actions/upload-reports-custom.yml
@@ -13,7 +13,7 @@ on:
           - stg
           - prod
       datastreams:
-        description: "Data Stream(s) (celr-csv,celr-hl7v2)"
+        description: "Data Stream(s) (celr_csv,celr_hl7v2)"
         required: true
         default: ""
       start_date:
