--- a/upload-server/.env.example
+++ b/upload-server/.env.example
@@ -32,9 +32,6 @@ OAUTH_INTROSPECTION_URL=
 OAUTH_ISSUER_URL=
 OAUTH_REQUIRED_SCOPES=
 
-# processing status health
-PROCESSING_STATUS_HEALTH_URI=
-
 #################################
 #### Upload location configs ####
 #################################
@@ -58,8 +55,9 @@ S3_BUCKET_NAME=
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-DEX_MANIFEST_CONFIG_BUCKET_NAME=
-DEX_S3_MANIFEST_CONFIG_FOLDER_NAME=
+# Only set one, DEX_MANIFEST_CONFIG_BUCKET_NAME or DEX_S3_MANIFEST_CONFIG_FOLDER_NAME
+DEX_MANIFEST_CONFIG_BUCKET_NAME= # use if the sender manifest configs are in a different bucket
+DEX_S3_MANIFEST_CONFIG_FOLDER_NAME= # use if the sender manifest configs are different folder in the same bucket
 
 #################################
 #### Report location configs ####
@@ -92,25 +90,6 @@ SUBSCRIBER_SUBSCRIPTION=
 ###########################################
 #### File delivery target configs ####
 ###########################################
-
-#### Routing delivery target ####
-
-# local file system routing directory
-LOCAL_ROUTING_FOLDER= # has default
-
-# Azure routing container
-ROUTING_STORAGE_ACCOUNT=
-ROUTING_STORAGE_KEY=
-ROUTING_TENANT_ID=
-ROUTING_CLIENT_ID=
-ROUTING_CLIENT_SECRET=
-ROUTING_ENDPOINT=
-ROUTING_CHECKPOINT_CONTAINER_NAME= # has default
-
-# S3 routing bucket
-ROUTING_S3_ENDPOINT=
-ROUTING_S3_BUCKET_NAME=
-
 
 #### EDAV delivery target ####
 
