Moving formatting and config functions to a utils package

--- a/upload-reports/github-actions/upload-reports-custom.yml
+++ b/upload-reports/github-actions/upload-reports-custom.yml
@@ -17,11 +17,11 @@ on:
         required: true
         default: ""
       start_date:
-        description: "Start Date (yyyy/mm/dd)"
+        description: "Start Date (YYYY-MM-DDTHH:MM:SSZ)"
         required: true
         default: ""
       end_date:
-        description: "End Date (yyyy/mm/dd)"
+        description: "End Date (YYYY-MM-DDTHH:MM:SSZ)"
         required: true
         default: ""
 
