switched tests back to using AZURITE_STORAGE_KEY; switched the docker-compose files back to using the values for the service they just spun up instead of being configurable

--- a/upload-server/docker-compose.azurite.yml
+++ b/upload-server/docker-compose.azurite.yml
@@ -10,11 +10,11 @@ services:
       - 10002:10002
   upload-server:
     environment:
-      - AZURE_STORAGE_ACCOUNT=${AZURE_STORAGE_ACCOUNT:-devstoreaccount1}
+      - AZURE_STORAGE_ACCOUNT=devstoreaccount1
       # Default test storage key can be found here https://github.com/Azure/Azurite?tab=readme-ov-file#default-storage-account
       - AZURE_STORAGE_KEY=${AZURE_STORAGE_KEY}
-      - AZURE_ENDPOINT=${AZURE_ENDPOINT:-http://azurite:10000/devstoreaccount1}
-      - TUS_AZURE_CONTAINER_NAME=${TUS_AZURE_CONTAINER_NAME:-test}
+      - AZURE_ENDPOINT=http://azurite:10000/devstoreaccount1
+      - TUS_AZURE_CONTAINER_NAME=test
     depends_on:
       - azurite
       - cache
