--- a/upload-server/docker-compose.testing.yml
+++ b/upload-server/docker-compose.testing.yml
@@ -2,7 +2,7 @@ services:
   upload-server:
     command: go test -coverprofile=c.out -coverpkg=./... ./... -tags=integration
     environment:
-      - AZURE_STORAGE_KEY=${AZURE_STORAGE_KEY}
+      - AZURITE_STORAGE_KEY=${AZURITE_STORAGE_KEY}
     depends_on:
       - minio
       - azurite
