--- a/upload-server/configs/deliver.yml
+++ b/upload-server/configs/deliver.yml
@@ -1,34 +1,32 @@
 version: 1.0
 
-#azure defaults for edav
-az-edav-defaults: &az-edav
+az-edav: &az-edav
   endpoint: $EDAV_ENDPOINT
-  destination_container: $EDAV_CHECKPOINT_CONTAINER_NAME
+  container_name: $EDAV_CHECKPOINT_CONTAINER_NAME
   tenant_id: $EDAV_TENANT_ID
   client_id: $EDAV_CLIENT_ID
   client_secret: $EDAV_CLIENT_SECRET
 
-#azure defaults for ehdi & eicr
-az-ehdi-eicr-defaults: &az-ehdi-eicr
+az-ehdi: &az-ehdi
+  endpoint: $EHDI_ENDPOINT
+  container_name: $EHDI_CHECKPOINT_CONTAINER_NAME
   tenant_id: $EHDI_TENANT_ID
   client_id: $EHDI_CLIENT_ID
   client_secret: $EHDI_CLIENT_SECRET
 
-#azure defaults for ncird
-az-ncird-defaults: &az-ncird
+az-eicr: &az-eicr
+  endpoint: $EICR_ENDPOINT
+  container_name: $EICR_CHECKPOINT_CONTAINER_NAME
+  tenant_id: $EICR_TENANT_ID
+  client_id: $EICR_CLIENT_ID
+  client_secret: $EICR_CLIENT_SECRET
+
+az-ncird: &az-ncird
   endpoint: $NCIRD_ENDPOINT
   container_name: $NCIRD_CHECKPOINT_CONTAINER_NAME
   tenant_id: $NCIRD_TENANT_ID
   client_id: $NCIRD_CLIENT_ID
   client_secret: $NCIRD_CLIENT_SECRET
-
-#s3 defaults
-s3-defaults: &s3
-  endpoint: $S3_ENDPOINT
-  access_key_id: $S3_ACCESS_KEY_ID
-  secret_access_key: $S3_SECRET_ACCESS_KEY
-  region: us-east-1
-  bucket_name: target
 
 # if needed, properties of an anchor can be overridden
 # in a delivery target
@@ -36,95 +34,54 @@ s3-defaults: &s3
 # path_template can be defined at data_stream level
 # where it is valid for all targets unless
 # a target defines its own path_template property
-#
-# to disable a target, place - before the name
-# e.g. -ncird
-# or simply remove it if not needed anymore
 programs:
-#edav
   - data_stream_id: pulsenet
     data_stream_route: localsequencefile
     delivery_targets:
-      - name: -edav
-        type: s3
-# edav az blob example
-#     - name: edav-az
-#       type: az-blob
-#       <<: *az-edav
-####### override defaults if needed
-#       endpoint: $EDAV_ENDPOINT
-#       destination_container: $EDAV_CHECKPOINT_CONTAINER_NAME
-#       path_template: $EDAV_PATH_TEMPLATE
-
-#ehdi
+      - name: edav
+        type: az-blob
+        <<: *az-edav
   - data_stream_id: ehdi
     data_stream_route: csv
     path_template: $EHDI_PATH_TEMPLATE
     delivery_targets:
       - name: ehdi
-        type: s3
-        <<: *s3
-# multi target example
-# note the bucket_name override
-      - name: ehdi-backup
-        type: s3
-        <<: *s3
-        bucket_name: backup
-      - name: ehdi-local
-        type: file
-        directory: $LOCAL_EHDI_FOLDER
-# ehdi az blob example
-#     - name: ehdi-az
-#       type: az-blob
-#       <<: *az-ehdi-eicr
-  ####### override defaults if needed
-#       endpoint: $EHDI_ENDPOINT
-#       destination_container: $EHDI_CHECKPOINT_CONTAINER_NAME
-#       path_template: $EHDI_PATH_TEMPLATE
-
-# eicr
+        type: az-blob
+        <<: *az-ehdi
   - data_stream_id: eicr
     data_stream_route: fhir
     path_template: $EICR_PATH_TEMPLATE
     delivery_targets:
       - name: eicr
-        type: s3
-        <<: *s3
-# ncird
-  - data_stream_id: covid-all-monthly-vaccination
-    data_stream_route: csv
-    delivery_targets:
-      - name:                     -ncird
-        type: s3
-        <<: *s3
+        type: az-blob
+        <<: *az-eicr
   - data_stream_id: rsp-prevention
     data_stream_route: csv
     delivery_targets:
-      - name: -ncird
-        type: s3
-        <<: *s3
+      - name: ncird
+        type: az-blob
+        <<: *az-ncird
   - data_stream_id: generic-immunization
     data_stream_route: csv
     delivery_targets:
-      - name: -ncird
-        type: s3
-        <<: *s3
-        bucket_name: target
+      - name: ncird
+        type: az-blob
+        <<: *az-ncird
   - data_stream_id: influenza-vaccination
     data_stream_route: csv
     delivery_targets:
-      - name: -ncird
-        type: s3
-        <<: *s3
+      - name: ncird
+        type: az-blob
+        <<: *az-ncird
   - data_stream_id: routine-immunization
     data_stream_route: other
     delivery_targets:
-      - name: -ncird
-        type: s3
-        <<: *s3
+      - name: ncird
+        type: az-blob
+        <<: *az-ncird
   - data_stream_id: rsp-prevention
     data_stream_route: csv
     delivery_targets:
-      - name: -ncird
-        type: s3
-        <<: *s3
+      - name: ncird
+        type: az-blob
+        <<: *az-ncird
