--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -41,6 +41,34 @@ jobs:
         run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
       - name: Show coverage
         run: go tool cover -func=c.out
+  e2e-test:
+    name: E2E Test
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+      TEST_REPORTS_DIR: ./playwright-report
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install podman compse
+        run: pip3 install podman-compose
+      - name: Run Tests - File System
+        run: PLAYWRIGHT_JSON_OUTPUT_NAME=file-system-report.json podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up --exit-code-from playwright
+      - name: Run Tests - Azure
+        run: PLAYWRIGHT_JSON_OUTPUT_NAME=azure-report.json podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --exit-code-from playwright
+      - name: Run Tests - AWS
+        run: PLAYWRIGHT_JSON_OUTPUT_NAME=aws-report.json podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up --exit-code-from playwright
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+      - name: Concatenate reports
+        run: cat playwright-report/*-report.json > playwright-report.json
+      - uses: daun/playwright-report-summary@v3
+        if: always()
+        with:
+          report-file: playwright-report.json
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
