--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -53,22 +53,37 @@ jobs:
         run: pip3 install podman-compose
       - name: Run Tests - File System
         run: PLAYWRIGHT_JSON_OUTPUT_NAME=file-system-report.json podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up --exit-code-from playwright
+      - name: Comment File System Test Report to PR
+        uses: daun/playwright-report-summary@v3
+        if: always()
+        with:
+          report-file: file-system-report.json
+          # Title/headline to use for the created pull request comment.
+          comment-title: 'Playwright test results - File System'
       - name: Run Tests - Azure
         run: PLAYWRIGHT_JSON_OUTPUT_NAME=azure-report.json podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --exit-code-from playwright
+      - name: Comment Azure Test Report to PR
+        uses: daun/playwright-report-summary@v3
+        if: always()
+        with:
+          report-file: azure-report.json
+          # Title/headline to use for the created pull request comment.
+          comment-title: 'Playwright test results - Azure'
       - name: Run Tests - AWS
         run: PLAYWRIGHT_JSON_OUTPUT_NAME=aws-report.json podman-compose -f docker-compose.yml -f docker-compose.minio.yml -f docker-compose.e2e.yml up --exit-code-from playwright
+      - name: Comment AWS Test Report to PR
+        uses: daun/playwright-report-summary@v3
+        if: always()
+        with:
+          report-file: aws-report.json
+          # Title/headline to use for the created pull request comment.
+          comment-title: 'Playwright test results - AWS'
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
-      - name: Concatenate reports
-        run: cat playwright-report/*-report.json > playwright-report.json
-      - uses: daun/playwright-report-summary@v3
-        if: always()
-        with:
-          report-file: playwright-report.json
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
