updating the second image to have the same permissions as the first

--- a/upload-server/Dockerfile
+++ b/upload-server/Dockerfile
@@ -27,7 +27,7 @@ WORKDIR /app
 COPY --from=builder /app/dextusd .
 
 # Create the 'app' user and group
-RUN addgroup -S app && adduser -S -G app app
+RUN addgroup -S -g 101 app && adduser -S -u 100 -G app app
 
 # Ensure the app user owns the binary
 RUN chown app:app ./dextusd
