--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -1,12 +1,14 @@
 services:
   playwright:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
+    build: .
     volumes:
-      - ../tests/smoke:/app
-    working_dir: /app/playwright
+      - ../tests/smoke/playwright:/app
+      - /app/node_modules
+    working_dir: /app
     ports:
       - 9222:9222
-    command: npx playwright test || exit 0 
+    command: bash -c "npm install && npm test || exit 0"
     # appending `|| exit 0` will wait until all of the workers have completed before exiting
     environment:
       - CI=${CI}
@@ -26,3 +28,10 @@ services:
       retries: 5
       start_period: 20s
       timeout: 10s
+    extends:
+      file: docker-compose.yml
+      service: upload-server
+  cache:
+    extends:
+      file: docker-compose.yml
+      service: cache
