--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -29,6 +29,8 @@ jobs:
       - name: Build Check
         run: go build -o upload-server ./cmd/main.go
   simulation-test:
+    if: ${{ always() }}
+    needs: e2e-test
     name: Simulation Test
     runs-on: ubuntu-latest
     env:
@@ -38,14 +40,10 @@ jobs:
       - name: Install podman compose
         run: pip3 install podman-compose
       - name: Run Tests
-        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-service
+        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.testing.yml up --exit-code-from upload-server
       - name: Show coverage
         run: go tool cover -func=c.out
-      - name: Run Tests
-        run: podman-compose down
   e2e-test:
-    if: ${{ always() }}
-    needs: simulation-test
     name: E2E Test
     runs-on: ubuntu-latest
     env:
