--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -53,7 +53,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install podman compse
         run: pip3 install podman-compose
-      - run: ls -la ../tests
+      - name: Create containers
+        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml create --force-recreate
       - name: Run Tests - File System
         run: PLAYWRIGHT_JSON_OUTPUT_NAME=file-system-report.json podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up cache upload-server playwright --exit-code-from playwright
   #     - name: Run Tests - Azure
