--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -11,17 +11,16 @@ services:
     command: sh -c "npm install; npm test --workers=1"
     environment:
       - CI=${CI}
-      - UI_URL=http://upload:${UI_PORT:-8081}
+      - UI_URL=http://upload-server:${UI_PORT:-8081}
     depends_on:
       upload-server:
         condition: service_healthy
   upload-server:
-    hostname: upload
     environment:
-      - SERVER_HOSTNAME=upload
+      - SERVER_HOSTNAME=upload-server
     healthcheck:
-      test: wget --no-verbose --tries=1 --spider "http://upload:${UI_PORT:-8081}" || exit 1
+      test: wget --no-verbose --tries=1 --spider "http://upload-server:${UI_PORT:-8081}" || exit 1
       interval: 60s
-      retries: 5
+      retries: 10
       start_period: 20s
       timeout: 10s
