--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       upload-server:
         condition: service_healthy
+    networks:
+      - upload-network
   upload-server:
     environment:
       - SERVER_HOSTNAME=upload-server
