--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -1,4 +1,16 @@
 services:
+  upload-server:
+    environment:
+      - SERVER_HOSTNAME=upload-server
+      - HEALTHCHECK_DEBUG=1
+    ports:
+      - ""
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider "http://upload-server:${UI_PORT:-8081}" || exit 1
+      interval: 60s
+      retries: 10
+      start_period: 20s
+      timeout: 10s
   playwright:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     build: .
@@ -6,23 +18,10 @@ services:
       - ../tests/smoke/playwright:/app
       - /app/node_modules
     working_dir: /app
-    ports:
-      - 9222:9222
-    command: sh -c "npm install; npm test --workers=1"
+    command: sh -c "sleep 60; npm install; npm test --workers=1"
     environment:
       - CI=${CI}
       - UI_URL=http://upload-server:${UI_PORT:-8081}
     depends_on:
       upload-server:
         condition: service_healthy
-    networks:
-      - upload-network
-  upload-server:
-    environment:
-      - SERVER_HOSTNAME=upload-server
-    healthcheck:
-      test: wget --no-verbose --tries=1 --spider "http://upload-server:${UI_PORT:-8081}" || exit 1
-      interval: 60s
-      retries: 10
-      start_period: 20s
-      timeout: 10s
