--- a/upload-server/Dockerfile
+++ b/upload-server/Dockerfile
@@ -25,6 +25,8 @@ FROM docker.io/library/alpine:3.20.2
 WORKDIR /app
 
 COPY --from=builder /app/dextusd .
+RUN mkdir -p ./configs/local
+COPY --from=builder /app/configs/local/deliver.yml ./configs/local/deliver.yml
 
 # Create the 'app' user and group
 RUN addgroup -S app && adduser -S -G app app
