--- a/upload-server/docker-compose.azurite.yml
+++ b/upload-server/docker-compose.azurite.yml
@@ -1,14 +1,13 @@
-version: "3.9"
 services:
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
-    container_name: "azurite"
+    container_name: azurite
     hostname: azurite
     restart: always
     ports:
-      - "10000:10000"
-      - "10001:10001"
-      - "10002:10002"
+      - 10000:10000
+      - 10001:10001
+      - 10002:10002
   upload-server:
     environment:
       - AZURE_STORAGE_ACCOUNT=devstoreaccount1
