extending upload-server and cache directly into the e2e docker-compose file; changed ports for tests to avoid collisions; removed the ':' from the UI_PORT to make it clearer how it should be set; created a UIUrl appconfig setting to add the ':' back

--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -29,8 +29,6 @@ jobs:
       - name: Build Check
         run: go build -o upload-server ./cmd/main.go
   simulation-test:
-    if: ${{ always() }}
-    needs: e2e-test
     name: Simulation Test
     runs-on: ubuntu-latest
     env:
@@ -54,7 +52,7 @@ jobs:
       - name: Install podman compse
         run: pip3 install podman-compose
       - name: Run Tests - File System
-        run: PLAYWRIGHT_JSON_OUTPUT_NAME=file-system-report.json podman-compose -f docker-compose.yml -f docker-compose.e2e.yml up cache upload-server playwright --exit-code-from playwright
+        run: PLAYWRIGHT_JSON_OUTPUT_NAME=file-system-report.json podman-compose -f docker-compose.e2e.yml up --exit-code-from playwright
   #     - name: Run Tests - Azure
   #       run: ZURITE_STORAGE_KEY=${{ secrets.AZURITE_STORAGE_KEY }} PLAYWRIGHT_JSON_OUTPUT_NAME=azure-report.json podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --exit-code-from playwright
   #     - name: Run Tests - AWS
