--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -1,16 +1,25 @@
 services:
-  upload-server:
-    environment:
-      - SERVER_HOSTNAME=upload-server
-      - HEALTHCHECK_DEBUG=1
+  cache:
+    extends:
+      file: docker-compose.yml
+      service: cache
+    restart: no
     ports:
-      - ""
-    healthcheck:
-      test: wget --no-verbose --tries=1 --spider "http://upload-server:${UI_PORT:-8081}" || exit 1
-      interval: 60s
-      retries: 10
-      start_period: 20s
-      timeout: 10s
+      - 6380:6380
+    command: redis-server --port 6380
+  upload-server:
+    extends:
+      file: docker-compose.yml
+      service: upload-server
+    environment:
+      - REDIS_CONNECTION_STRING=redis://redispw@cache:6380
+      - SERVER_HOSTNAME=upload-server
+      - SERVER_PORT=8082
+      - UI_PORT=8083
+    restart: no
+    ports:
+      - 8082
+      - 8083
   playwright:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     build: .
@@ -18,10 +27,10 @@ services:
       - ../tests/smoke/playwright:/app
       - /app/node_modules
     working_dir: /app
-    command: sh -c "sleep 60; npm install; npm test --workers=1"
+    command: sh -c "./wait-for-it.sh "http://upload-server:8083"; npm install; npm test --workers=1"
     environment:
       - CI=${CI}
-      - UI_URL=http://upload-server:${UI_PORT:-8081}
+      - SERVER_URL=http://upload-server:8082
+      - UI_URL=http://upload-server:8083
     depends_on:
-      upload-server:
-        condition: service_healthy
+      - upload-server
