--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -25,7 +25,7 @@ services:
       - ../tests/smoke/playwright:/app
       - /app/node_modules
     working_dir: /app
-    command: sh -c './wait-for-it.sh "$$UI_URL"; npm install; npm test --workers=1'
+    command: sh -c 'sleep 60; npm install; npm test --workers=1'
     environment:
       - CI=${CI}
       - SERVER_URL=http://upload-server:8082
