nearly final version (#524)
* nearly final v

* added targets for deliver.yml

* fix for GetDestinationTarget

* removed old deliver.yml

* unmarshalls directly to config struct

* dedup target health checks

* addressing bulk updates - re Chase

* improved GetDestinationTargetName

* introduced func (t Target) Destination

* reverted requestbody struct

* removed code to check for unused target from yml

* Simplify unmarshalling (#527)

* Populate azure destination from yaml

* Allow usage of storage keys

* Use a config file

* unit tests and file delivery

* turn tests back on

* Working s3 delivery and tests

* Simplify path-template

* use case specific env vars for targets

* add dextesting use case

* add custom path temps for ncird targets

* add todo comment regarding path template cleanup

* copy deliver yml to runner image

* remove storage key to force use of service principle

* log warning when program has no targets

* add delivery config env var to docker compose

* readme section for delivery config

* update docs for delivery config

---------

Co-authored-by: tma5 <tma5@cdc.gov>
Co-authored-by: David Gage <whytheplatypus@gmail.com>

--- a/upload-server/docker-compose.azurite.yml
+++ b/upload-server/docker-compose.azurite.yml
@@ -15,6 +15,7 @@ services:
       - AZURE_STORAGE_KEY=${AZURE_STORAGE_KEY}
       - AZURE_ENDPOINT=http://azurite:10000/devstoreaccount1
       - TUS_AZURE_CONTAINER_NAME=test
+      - DEX_DELIVERY_CONFIG_FILE
     depends_on:
       - azurite
       - cache
