--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -51,8 +51,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install podman compse
         run: pip3 install podman-compose
+      - name: Pull Images
+        run: podman-compose -f docker-compose.e2e.yml pull
+      - name: Start Server - File System
+        run: podman-compose -f docker-compose.e2e.yml up upload-server
       - name: Run Tests - File System
-        run: PLAYWRIGHT_JSON_OUTPUT_NAME=file-system-report.json podman-compose -f docker-compose.e2e.yml up --exit-code-from playwright
+        run: PLAYWRIGHT_JSON_OUTPUT_NAME=file-system-report.json podman-compose -f docker-compose.e2e.yml up --no-recreate --exit-code-from playwright
   #     - name: Run Tests - Azure
   #       run: ZURITE_STORAGE_KEY=${{ secrets.AZURITE_STORAGE_KEY }} PLAYWRIGHT_JSON_OUTPUT_NAME=azure-report.json podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.e2e.yml up --exit-code-from playwright
   #     - name: Run Tests - AWS
