--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -16,6 +16,7 @@ services:
       - UI_PORT=8083
   playwright:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
+    container_name: playwright
     volumes:
       - ../tests/smoke/playwright:/app
       - /app/node_modules
